<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:background="@color/colorGreen">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col3"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col4"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col5"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col1BTC"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col2BTC"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="5"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col3BTC"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col4BTC"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col5BTC"
                android:padding="5sp"
                android:textSize="12sp"
                android:layout_weight="5"
                android:gravity="center"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col1ETH"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col2ETH"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="5"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col3ETH"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col4ETH"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col5ETH"
                android:padding="5sp"
                android:textSize="12sp"
                android:layout_weight="5"
                android:gravity="center"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col1BNC"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col2BNC"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="5"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col3BNC"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col4BNC"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="3"
                android:gravity="center"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/col5BNC"
                android:padding="5sp"
                android:textSize="12sp"
                android:layout_weight="5"
                android:gravity="center"
                />
        </TableRow>

    </TableLayout>


</RelativeLayout>